# mpmc_queues

./: .gitignore  CMakeLists.txt  README.md
docs/: MPMC Architecture.md  todo.md
docs/notes/: Epoch-Based Segment Recycler.md  Hazard.md  MPMC Interface.md  Queue Architecture for Bounded and Unbounded Segments.md  Queue Interfaces.md  Queue Storage Policies.md  Recycled Queue.md  Stack-Heap Container.md  Unbounded Interface.md
include/bench/: benchmark.hpp
include/linked/: BoundedChunkProxy.hpp  BoundedCounterProxy.hpp  BoundedMemProxy.hpp  BoundedMemProxy_old.hpp  UnboundedProxy.hpp
include/meta/: OptionsPack.hpp
include/queue/: specs.hpp
include/queue/base/: ILinkedSegment.hpp  IProxy.hpp  IQueue.hpp
include/queue/cell/: PackedSequencedCell.hpp  SequencedCell.hpp
include/queue/hazard/: HazardVector.hpp
include/queue/segment/: CASLoopSegment.hpp  FAAArray.hpp  HQSegment.hpp  LFring.hpp  PRQSegment.hpp  SCQueue.hpp
include/util/: bit.hpp
include/util/atomic/: cas2.hpp
include/util/hazard/: HazardCell.hpp  HazardVector.hpp
include/util/hazard/Recycler/: Buckets.hpp  EpochCell.hpp  LimboBuffer.hpp  PtrLookup.hpp  Recycler.hpp  VersionedIndex.hpp
include/util/hazard/SegmentRecycler/: IndexQueue.hpp  PtrLookup.hpp  Recycler.hpp  SingleWriterCell.hpp
include/util/memory/: HeapStorage.hpp  IStoragePolicy.hpp  StackStorage.hpp
include/util/meta/: TemplateSet.hpp
include/util/threading/: DynamicThreadTicket.hpp  StaticThreadTicket.hpp  ThreadPinner.hpp
include/util/timing/: AdditionalWork.hpp  TicksWait.h
queue/base/: ILinkedSegment.hpp  IProxy.hpp  IQueue.hpp
scripts/: memoryMonitor.py  sysinfo.py
src/sim/: test_stub.cpp
src/test/unit/: BoundedProxyTest.cpp  DynamicThreadTicketTest.cpp  HazardVectorTest.cpp  IndexQueueBase.cpp  LFringTest.cpp  LinkedSegmentTest.cpp  QueueTest.cpp  SegmentRecyclerTest.cpp  UnboundedQueueTest.cpp
src/util/time/: timeTicks.cpp
util/memory/: HeapStorage.hpp  IStoragePolicy.hpp  StackStorage.hpp
util/threading/: DynamicThreadTicket.hpp  dynamic_thread_ticket.hpp  static_thread_ticket.hpp
